--- a/TeenPattiConsole/TeenPattiConsole/Dockerfile
+++ b/TeenPattiConsole/TeenPattiConsole/Dockerfile
@@ -1,28 +1,18 @@
-# See https://aka.ms/customizecontainer to learn how to customize your debug container and how Visual Studio uses this Dockerfile to build your images for faster debugging.
-
-# This stage is used when running from VS in fast mode (Default for Debug configuration)
-FROM mcr.microsoft.com/dotnet/runtime:8.0 AS base
-USER $APP_UID
+# Stage 1: Runtime base image
+FROM mcr.microsoft.com/dotnet/aspnet:8.0 AS base
 WORKDIR /app
-
-
-# This stage is used to build the service project
+EXPOSE 8080
+ 
+# Stage 2: Build and publish
 FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
-ARG BUILD_CONFIGURATION=Release
 WORKDIR /src
-COPY ["TeenPattiConsole.csproj", "TeenPattiConsole/"]
-RUN dotnet restore "./TeenPattiConsole/TeenPattiConsole.csproj"
 COPY . .
-WORKDIR "/src/TeenPattiConsole"
-RUN dotnet build "./TeenPattiConsole.csproj" -c $BUILD_CONFIGURATION -o /app/build
-
-# This stage is used to publish the service project to be copied to the final stage
-FROM build AS publish
-ARG BUILD_CONFIGURATION=Release
-RUN dotnet publish "./TeenPattiConsole.csproj" -c $BUILD_CONFIGURATION -o /app/publish /p:UseAppHost=false
-
-# This stage is used in production or when running from VS in regular mode (Default when not using the Debug configuration)
+RUN dotnet restore
+RUN dotnet publish -c Release -o /app/publish
+ 
+# Final stage
 FROM base AS final
 WORKDIR /app
-COPY --from=publish /app/publish .
+COPY --from=build /app/publish .
 ENTRYPOINT ["dotnet", "TeenPattiConsole.dll"]
+
